unified row structs
